--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="header">
       <h1 class="header__title">Jon KleinBerg</h1>
-      <img src="/images/home-drink-title.png" alt="" style="border-radius:50%;width:150px;">
+      <img src="images/home-drink-title.png" alt="" style="border-radius:50%;width:150px;">
       <i
         ><p>
           Tisch University Professor<br />
